completed js for switching time

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </div>
           <div class="card-content">
             <div class="type">
-              <span>Work</span>
+              <span class="term">Work</span>
               <img src="images/icon-ellipsis.svg" alt="" />
             </div>
             <div class="hours">
@@ -60,7 +60,7 @@
           </div>
           <div class="card-content">
             <div class="type">
-              <span>Play</span>
+              <span class="term">Play</span>
               <img src="images/icon-ellipsis.svg" alt="" />
             </div>
             <div class="hours">
@@ -75,7 +75,7 @@
           </div>
           <div class="card-content">
             <div class="type">
-              <span>Study</span>
+              <span class="term">Study</span>
               <img src="images/icon-ellipsis.svg" alt="" />
             </div>
             <div class="hours">
@@ -90,7 +90,7 @@
           </div>
           <div class="card-content">
             <div class="type">
-              <span>Exercise</span>
+              <span class="term">Exercise</span>
               <img src="images/icon-ellipsis.svg" alt="" />
             </div>
             <div class="hours">
@@ -105,7 +105,7 @@
           </div>
           <div class="card-content">
             <div class="type">
-              <span>Social</span>
+              <span class="term">Social</span>
               <img src="images/icon-ellipsis.svg" alt="" />
             </div>
             <div class="hours">
@@ -120,7 +120,7 @@
           </div>
           <div class="card-content">
             <div class="type">
-              <span>Self Care</span>
+              <span class="term">Self Care</span>
               <img src="images/icon-ellipsis.svg" alt="" />
             </div>
             <div class="hours">
