--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="card-content">
             <div class="type">
               <span class="term">Work</span>
-              <img src="images/icon-ellipsis.svg" alt="" />
+              <img class="ellipsis" src="images/icon-ellipsis.svg" alt="" />
             </div>
             <div class="hours">
               <span class="total">32hrs</span>
@@ -56,7 +56,7 @@
         </div>
         <div class="card card--play">
           <div class="card-header">
-            <img src="images/icon-play.svg" alt="" />
+            <img class="ellipsis" src="images/icon-play.svg" alt="" />
           </div>
           <div class="card-content">
             <div class="type">
@@ -76,7 +76,7 @@
           <div class="card-content">
             <div class="type">
               <span class="term">Study</span>
-              <img src="images/icon-ellipsis.svg" alt="" />
+              <img class="ellipsis" src="images/icon-ellipsis.svg" alt="" />
             </div>
             <div class="hours">
               <span class="total">4hrs</span>
@@ -91,7 +91,7 @@
           <div class="card-content">
             <div class="type">
               <span class="term">Exercise</span>
-              <img src="images/icon-ellipsis.svg" alt="" />
+              <img class="ellipsis" src="images/icon-ellipsis.svg" alt="" />
             </div>
             <div class="hours">
               <span class="total">4hrs</span>
@@ -106,7 +106,7 @@
           <div class="card-content">
             <div class="type">
               <span class="term">Social</span>
-              <img src="images/icon-ellipsis.svg" alt="" />
+              <img class="ellipsis" src="images/icon-ellipsis.svg" alt="" />
             </div>
             <div class="hours">
               <span class="total">5hrs</span>
@@ -121,7 +121,7 @@
           <div class="card-content">
             <div class="type">
               <span class="term">Self Care</span>
-              <img src="images/icon-ellipsis.svg" alt="" />
+              <img class="ellipsis" src="images/icon-ellipsis.svg" alt="" />
             </div>
             <div class="hours">
               <span class="total">2hrs</span>
